--- a/style.css
+++ b/style.css
@@ -25,8 +25,11 @@ div.slider {
 
 div.header {
 	padding-top: 20px;
-	position: fixed;
-	right: 110px;
+	/*position: fixed;*/
+	/*right: 110px;*/
+	position: sticky;
+	top: 0;
+	z-index: 10;
 }
 
 li.nav {
@@ -52,12 +55,6 @@ li.nav a {
 	font-family: 'Serifa TH BT', serif;
 }
 
-a.card_link {
-	text-decoration: none;
-	color: #343434;
-	font-weight: normal;
-}
-
 #position_fix {
 	position: relative;
 	top: -10px;
@@ -72,6 +69,51 @@ a.card_link {
 
 .clear {
 	clear: left;
+}
+
+div.slider_content {
+	position: relative;
+	top: 30px;
+}
+
+#slider_arrow_right {
+	float: right;
+	height: 500px;
+	background-color: red;
+}
+
+#slider_arrow_left {
+	float: left;
+	height: 500px;
+	background-color: red;
+}
+
+p.slider_text {
+	width: 350px;
+	height: 500px;
+	float: left;
+	color: rgb(189,189,189);
+	font-family: 'Serifa TH BT', serif;
+	margin: 70px 70px 30px 30px;
+}
+
+#slider_title {
+	color: white;
+	font-size: 3em;
+	font-family: serif;
+}
+
+#slider_read {
+	color: white;
+	position: relative;
+	top: 40px;
+}
+
+#slider_img {
+	width: 400px;
+	height: 400px;
+	border-radius: 50%;
+	border: 20px solid rgb(158,158,158);
 }
 
 h1.header_text {
@@ -92,6 +134,12 @@ h5.header_text {
 div.content {
 	width: 1100px;
 	margin: 0px auto;
+}
+
+a.card_link {
+	text-decoration: none;
+	color: #343434;
+	font-weight: normal;
 }
 
 div.cards {
@@ -153,6 +201,13 @@ hr.title {
 	top: 20px;
 }
 
+.images {
+	height: 500px;
+	/*display: inline-block; 
+	position: relative;
+	right: -125px;*/
+}
+
 img.imgs {
 	height: 220px;
 	width: 330px;
@@ -185,7 +240,56 @@ h4.footer_head {
 	color: white;
 	font-weight: normal;
 	font-family: 'Serifa TH BT', serif;
+	font-size: 1.1em;
 	margin: 30px 0px 30px 0px;
+}
+
+p.post {
+	font-family: 'Serifa TH BT', serif;
+	color: rgb(158,158,158);
+	position: relative;
+	top: 20px;
+}
+
+#post_title {
+	font-family: serif;
+	color: #48CCCD;
+	position: relative;
+	top: -20px;
+}
+
+#post_admin {
+	font-family: 'Serifa TH BT', serif;
+	font-size: 0.8em;
+	color: #48CCCD;
+	position: relative;
+	top: -12px;
+}
+
+#post_date {
+	font-family: 'Serifa TH BT', serif;
+	font-size: 0.7em;
+	color: rgb(158,158,158);
+	position: relative;
+	top: -8px;
+}
+
+#post_domain {
+	font-family: 'Serifa TH BT', serif;
+	font-size: 0.7em;
+	color: rgb(117,117,117);
+	position: relative;
+	top: -12px;
+}
+
+#post_read {
+	font-family: 'Serifa TH BT', serif;
+	text-decoration: none;
+	color: #48CCCD;
+	font-weight: normal;
+	font-size: 1.2em;
+	display: inline-block;
+	padding-top: 10px;
 }
 
 ul.links {
@@ -254,9 +358,9 @@ input.input, textarea {
 
 div.footer2 {
 	height: 60px;
-	width: 1347px;
+	/*width: 1347px;*/
 	margin: 0px; 
-	display: inline-block;
+	/*display: inline-block;*/
 	background-color: #212121;
 	border-width: 1px;
 	border-color: black;
